@@ -37,6 +37,16 @@ class ObjectLookup(BrowserView):
                              self.context.REQUEST['BASE2'])
             meta_type = getattr(obj, 'meta_type')
         return tag % {'icon_path': icon_path, 'alt': meta_type}
+
+    def displayContainerReferenceButton(self, filter):
+        """
+        Returns True if, given the filter, the context should display
+        the 'place reference to this container...' button.
+        """
+        if not filter or filter==["Container"] or filter==['']:
+            return True
+        #assume filter contains a list of meta types
+        return (self.context.meta_type in filter)
     
     def objectLookupGetObjects(self, filter=None, show_add=False):
         """Returns objects to be displayed for the lookup window
@@ -58,8 +68,8 @@ class ObjectLookup(BrowserView):
               addables - a list of meta_types that are allowed to be added 
                         to the page
 
-              show_containers - true if containers are in the list of publishables
-                                but shouldn't be selectable
+              visible_containers - Contains the list of containers that
+                                   will only be visible (not selectable).
         """
         model = self.context
 
@@ -69,7 +79,7 @@ class ObjectLookup(BrowserView):
         addables = []
         all_addables = []
 
-        show_containers = []
+        visible_containers = []
 
         filter = filter or []
         
@@ -84,7 +94,7 @@ class ObjectLookup(BrowserView):
             ordered_publishables = [
                 o for o in model.get_ordered_publishables() 
                 if o.implements_container()]
-            show_containers = ordered_publishables
+            visible_containers = ordered_publishables
             if show_add:
                 addables = [a['name'] for a in all_addables if 
                                 IAsset.implementedBy(
@@ -98,7 +108,7 @@ class ObjectLookup(BrowserView):
                 [o for o in model.get_ordered_publishables() if 
                     o.implements_content() or o.implements_container() ]
             )
-            show_containers = [
+            visible_containers = [
                 o for o in ordered_publishables if o.implements_container()]
             if show_add:
                 addables = [a['name'] for a in all_addables if
@@ -133,7 +143,7 @@ class ObjectLookup(BrowserView):
                 if show_add:
                     addables = [a['name'] for a in all_addables]
             else:
-                #assume filter containers a list of meta types
+                #assume filter contains a list of meta types
                 objects = model.objectValues(filter)
                 defaultobj = model.get_default()
                 if defaultobj and defaultobj in objects:
@@ -143,7 +153,7 @@ class ObjectLookup(BrowserView):
                         ordered_publishables.append(o)
                     elif o.implements_container():
                         ordered_publishables.append(o)
-                        show_containers.append(o)
+                        visible_containers.append(o)
                 for o in model.get_assets():
                     if o in objects:
                         assets.append(o)
@@ -155,7 +165,7 @@ class ObjectLookup(BrowserView):
         # sort the assets
         assets.sort(lambda a, b: cmp(a.id, b.id))
 
-        return (default, ordered_publishables, assets, addables, show_containers)
+        return (default, ordered_publishables, assets, addables, visible_containers)
 
 
 class SidebarView(BrowserView):
